# my-nix

./: .gitignore  Untitled  disko.sh  flake.lock-problem  flake.lock.og2  flake.nix  nohup.out
assets/: hrf.face.icon  nixos-logo
docs/: env-variables.txt  nix-commands.txt  nix-flatpaks.txt  waydroid-setup.txt
modules/: personal.nix  (+3 more)
modules/nixos/environment/window-managers/git-wms/fowm/fowm/: Makefile  README.md  action.cc  action.hh  atoms.cc  atoms.hh  border.cc  border.hh  client.cc  client.hh  config.cc  config.hh  cursor.cc  cursor.hh  decoration.cc  decoration.hh  decorfunc.hh  depend.mk  fowm.1  frame.cc  frame.hh  info.cc  info.hh  main.cc  main.hh  menu.cc  menu.hh  meson.build  meson_options.txt  misc.cc  misc.hh  pixmap.cc  pixmap.hh  screen.cc  screen.hh  title.cc  title.hh  utility.cc  utility.hh  window.cc  (+4 more)
modules/nixos/environment/window-managers/git-wms/fowm/fowm/config/: config  menus
modules/nixos/environment/window-managers/git-wms/fowm/fowm/config/og/: arrow-sel.xpm  arrow.xpm  btm-le-fo.xpm  btm-le-un.xpm  btm-ri-fo.xpm  btm-ri-un.xpm  btn-clo-fo.xpm  btn-clo-ho.xpm  btn-clo-pr.xpm  btn-clo-un.xpm  btn-max-fo.xpm  btn-max-ho.xpm  btn-max-pr.xpm  btn-max-un.xpm  btn-min-fo.xpm  btn-min-ho.xpm  btn-min-pr.xpm  btn-min-un.xpm  info-le.xpm  info-ri.xpm  info.xpm  menu-btm-le.xpm  menu-btm-ri.xpm  menu-btm.xpm  menu-le.xpm  menu-ri.xpm  menu-top-le.xpm  menu-top-ri.xpm  menu-top.xpm  side-fo.xpm  side-un.xpm  theme  title-fo.xpm  title-le-fo.xpm  title-le-pr.xpm  title-le-un.xpm  title-pr.xpm  title-ri-fo.xpm  title-ri-pr.xpm  title-ri-un.xpm  (+7 more)
(+1366 files in other folders)
